# Eagle-Eye

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: handlers.rs  main.rs
static/: app.js  index.html  style.css
