[package]
name = "eagle-eye"
version = "1.0.0"
edition = "2021"
authors = ["Hexguard Security <info@hexguard.net>"]
description = "An advanced OSINT tool for satellite imagery analysis and geospatial intelligence"
repository = "https://github.com/hexguard/eagle-eye"
license = "MIT"
readme = "README.md"
keywords = ["osint", "satellite", "intelligence", "geospatial", "security"]
categories = ["visualization", "web-programming", "command-line-utilities"]

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
dotenv = "0.15"
thiserror = "1.0"
regex = "1.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1